# rag_toolkit

./: .env.example  pyproject.toml  readme.md
examples/: basic_usage.py
rag_toolkit/: __init__.py  client.py  config.py  query.py
rag_toolkit/raganything/: modalprocessors.py  processor.py  query.py  raganything.py
