[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rag-toolkit"
version = "0.1.0"
description = "Document RAG toolkit - parse, index, and query documents with LightRAG + RAG-Anything"
requires-python = ">=3.10"
dependencies = [
    "lightrag-hku",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "tqdm",
    "reportlab>=4.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
mineru = ["mineru[core]>=2.6.4"]
docling = ["docling"]

[tool.setuptools.packages.find]
include = ["rag_toolkit*"]
